# tester

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
.github/workflows/: github-publish.yml  publish-server.yml  publish-worker.yml  tests.yml
apps/api/: encoders.py  errors.py  response.py  urls.py
apps/api/views/: status.py
apps/core/: admin.py  auth.py  jobs.py  validators.py
apps/core/migrations/: 0001_initial.py  0002_http_method.py  0003_task_output_alter_scenario_body_alter_task_message.py  0004_assignment_database.py  0005_evaluations.py  0006_task_additional_information_alter_evaluation_links.py  0007_schemas.py  0008_ignored_properties_status.py  0009_alter_taskrecord_status.py  0010_scenario_priority.py  0011_evaluation_creator.py  0012_task_record_messages.py  0013_alter_taskrecord_status.py  0014_alter_task_image.py  0015_alter_task_additional_information.py
apps/core/models/: __init__.py  assignment.py  auth_source.py  base.py  evaluation.py  scenario.py  task.py  task_record.py
apps/web/: apps.py  context_processors.py  forms.py  urls.py
conf/: entrypoint.sh  http.conf  nginx.conf  supervisor.conf  tester-dbs.service  worker_entrypoint.sh  worker_probe.sh
dbs_tester/: asgi.py  urls.py  wsgi.py
dbs_tester/settings/: base.py  production.py
docs/: README.md  TesterDBS.mwb
templates/_layout/: base.html  skeleton.html
templates/registration/: login.html
templates/web/: archive.html  changelog.html  dashboard.html  diff.html  evaluation.html  evaluation_overview.html  history.html  task.html  task_detail.html
(+12 files in other folders)
