[tool.poetry]
name = "dbs_tester"
version = "1.5.0"
description = "DBS tester application"
authors = [
    "Jakub Dubec <jakub.dubec@stuba.sk>"
]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4"
python-dotenv = "^0"
argon2-cffi = "^21.0.0"
sentry-sdk = "^1"
psycopg2 = "^2.9"
redis = "^4.0"
django-rq = "^2.6"
requests = "^2.27.1"
django-bootstrap-v5 = "^1.0.11"
Markdown = "^3.4.1"
pygal = "^3.0.0"
python-ldap = "^3.4.3"
docker = "^6.0.1"
python-crontab = "^2.7.1"
porcupine-python = "^0.5.0"
django-api-forms = "1.0.0rc7"


[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
