[tool.poetry]
name = "dbs_tester"
version = "1.11.0"
description = "DBS tester application"
authors = [
    "Jakub Dubec <jakub.dubec@stuba.sk>"
]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
python-dotenv = "^1"
argon2-cffi = "^23.0"
sentry-sdk = "^1"
psycopg = {version = "^3.1", extras = ["c"]}
redis = "^5.0"
django-rq = "^2.7"
requests = "==2.29.0"
django-bootstrap5 = "^23.4"
Markdown = "^3.4.1"
pygal = "^3.0.0"
python-ldap = "^3.4.3"
docker = "^7.0"
python-crontab = "^3.0"
porcupine-python = "^0.5.0"
django-api-forms = "1.0.0rc9"

[tool.poetry.dev-dependencies]
black = "^23.12.1"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | venv
  | data
  | logs
  | media
  | private
  | static
  | conf
  | \.stoplight
)/
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
